--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -2,15 +2,22 @@
 @import './index';
 @import './coin';
 @import './collection';
+@import './collections';
 @import './login';
 @import './signup';
 @import './messages';
 @import './message';
+@import './explore';
+@import './sale';
+@import './user';
 
 
 // components
 @import './navbar';
-@import './editCoin';
+@import './coinModal';
+@import './collectionModal';
+@import './sellModal';
+
 
 
 *{
@@ -20,9 +27,9 @@
   font-style: normal;
 }
 
-// div[class$="body"] {
-//   margin-top: 21px;
-// }
+div[class$="body"] {
+  margin: 10px 10px 10px;
+}
 
 h1{
   font-size: 36px;
@@ -44,15 +51,15 @@ h4{
 
 
 
-button{
+button, .button-style{
   border: none;
   color: white;
-  background-color: #5386e4;
+  background-color: hsl(219, 73%, 61%);
 }
 
-button:active{
+button:active, .button-style:active{
 
-  background-color:aquamarine;
+  background-color:hsl(219, 40%, 61%);
 }
 
 
@@ -79,7 +86,24 @@ button:active{
 
 
 
-// .sticky-nav{
-//   position: fixed;
-//    top: 0px;
+#coin-modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+ol{
+  padding-left: 0px;
+}
+
+// body{
+//   background-color: #EAEDED;
 // }
