--- a/app/styles/login.scss
+++ b/app/styles/login.scss
@@ -1,21 +1,28 @@
-.login-form{
-  display: grid;
-  justify-content: center;
-  
-  label{
-    margin-top: 8px;
+.login-body {
+  .login-label {
+    text-align: center;
+    margin-bottom: 20px;
   }
 
-  button{
-    margin-top: 10px;
-    padding: 5px 0px 5px;
-  }
+  .login-form {
+    display: grid;
+    justify-content: center;
 
-  .signup{
-    margin-top: 5px;
-    text-align:center;
-    .LinkTo:visited{
-      color: black;
+    label {
+      margin-top: 8px;
+    }
+
+    button {
+      margin-top: 10px;
+      padding: 5px 0px 5px;
+    }
+
+    .signup {
+      margin-top: 5px;
+      text-align: center;
+      .LinkTo:visited {
+        color: black;
+      }
     }
   }
 }
