--- a/app/styles/navbar.scss
+++ b/app/styles/navbar.scss
@@ -30,12 +30,7 @@
     background-color: #5386e4;
   }
 
-  h2 {
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: lighter;
-  }
-
-  .logout, .user{
+  .logout, .login, .user{
     float:right;
 
     button{
@@ -43,10 +38,11 @@
       color: white;
       background-color: #333;
       text-align: center;
-      padding: 21px 16px;
+      padding: 20px 16px;
       text-decoration: none;
 
       border-style: none;
+      font-size: 16px;
     }
 
     button:active {
