--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -1,20 +1,25 @@
-<h1>login</h1>
+<div class="login-body">
 
-<form class="login-form" {{on "submit" this.authenticate}}>
-  <label for="username">Username</label>
-  <input type="text" name="username" {{on "change" (fn this.update "username")}}>
-  <label for="password">Password</label>
-  <input type="password" name="Password" {{on "change" (fn this.update "password")}}>
-  <button type="submit">Login</button>
-  <div class="signup">
-    <LinkTo @route="signup" class="LinkTo">Sign Up</LinkTo>
+
+  <div class="login-label">  
+    <h1>login</h1>
   </div>
 
-</form>
 
+  <form class="login-form" {{on "submit" this.authenticate}}>
+    <label for="username">Username</label>
+    <input type="text" name="username" {{on "change" (fn this.update "username" )}}>
+    <label for="password">Password</label>
+    <input type="password" name="Password" {{on "change" (fn this.update "password" )}}>
+    <button type="submit">Login</button>
+    <div class="signup">
+      <LinkTo @route="signup" class="LinkTo">Sign Up</LinkTo>
+    </div>
 
+  </form>
 
-{{#if this.error}}
+  {{#if this.error}}
   <p><strong>{{this.error}}</strong></p>
-{{/if}}
+  {{/if}}
 
+</div>
